Fix discipline rename from attivita.

--- a/layouts/page/contatto.html
+++ b/layouts/page/contatto.html
@@ -17,7 +17,7 @@
 		</div>
 	</div>
 	
-	<p>In caso di problemi con il **sito web** si prega di contattare direttamente il <a href="mailto:simone.mig29@gmail.com">webmaster</a>.</p>
+	<p>In caso di problemi legati al sito web si prega di contattare direttamente il <a href="mailto:simone.mig29@gmail.com">webmaster</a>.</p>
 	
 	{{ .Content }}
 </main>
