--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -32,7 +32,7 @@
 					<a href="{{ .Site.BaseURL }}chi_siamo">Chi siamo</a>
 				</li>
 				<li>
-					<a href="{{ .Site.BaseURL }}attivita">Attività</a>
+					<a href="{{ .Site.BaseURL }}disciplina">Discipline</a>
 				</li>
 				<li>
 					<a href="{{ .Site.BaseURL }}comitato">Comitato</a>
