--- a/layouts/disciplina/list.html
+++ b/layouts/disciplina/list.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 
 <main>
-	<h1>Attività</h1>
+	<h1>Discipline</h1>
 	{{ range .Data.Pages.ByTitle }}
 		<div>
 			<h2>
