Add Programma as new page.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 
-	<a class="btn btn-default btn-block" href="{{ .Site.BaseURL }}disciplina/">Tutte le attività</a>
+	<a class="btn btn-default btn-block" href="{{ .Site.BaseURL }}disciplina/">Tutte le discipline</a>
 </main>
 
 {{ partial "footer.html" . }}
