--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -48,6 +48,9 @@
 					<a href="{{ .Site.BaseURL }}disciplina">Discipline</a>
 				</li>
 				<li>
+					<a href="{{ .Site.BaseURL }}programma">Programma</a>
+				</li>
+				<li>
 					<a href="{{ .Site.BaseURL }}contatto">Contatto</a>
 				</li>
 			</ul>
