--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,18 +12,20 @@
 		<header>
 			<div class="row vertical-align">
 				<div class="col-xs-2">
-					<img class="logo img-responsive" src="http://www.gtsc.ch/immagini/logo2.gif"/>
+					<img class="logo img-responsive" src="/img/logo.gtsc.gif"/>
 				</div>
 				<div class="col-xs-8 banner-text">
 					<p>Gruppo Ticinese Sportivi Ciechi</p>
 				</div>
 				<div class="col-xs-2">
-					<img class="img-responsive" src="http://www.gtsc.ch/immagini/logo-piccolo-2-150-50.jpg"/>
+					<a href="http://www.ti-sport.ch/index.php">
+						<img class="img-responsive" src="/img/logo-asnf.jpg"/>
+					</a>
 				</div>
 			</div>
 		</header>
 		
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default" aria-label="Menu principale">
 			<ul class="nav navbar-nav">
 				<li>
 					<a href="{{ .Site.BaseURL }}">Home</a>
