--- a/layouts/shortcodes/tbl_compiti_comitato.html
+++ b/layouts/shortcodes/tbl_compiti_comitato.html
@@ -1,5 +1,5 @@
 
-<table class="table table-striped table-bordered">
+<table class="table">
 	<tr>
 		<th>Compiti</th>
 		<th>Responsabili e collaboratori</th>
