Fix some url bug when exporting website.
Add new fig shortcode replacing the default figure one.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,25 +19,25 @@
 		<div class="col-xs-3">
 			<a href="{{ .Site.BaseURL }}disciplina/sci_alpino/">
 				<h3>Sci alpino</h3>
-				<img src="/img/ico_sci.png" class="ico-attivita img-thumbnail img-responsive" alt=""/>
+				<img src="img/ico_sci.png" class="ico-attivita img-thumbnail img-responsive" alt=""/>
 			</a>
 		</div>
 		<div class="col-xs-3">
 			<a href="{{ .Site.BaseURL }}disciplina/sci_fondo/">
 				<h3>Sci di fondo</h3>
-				<img src="/img/ico_sci_fondo.png" class="ico-attivita img-thumbnail img-responsive" alt=""/>
+				<img src="img/ico_sci_fondo.png" class="ico-attivita img-thumbnail img-responsive" alt=""/>
 			</a>
 		</div>
 		<div class="col-xs-3">
 			<a href="{{ .Site.BaseURL }}disciplina/tandem/">
 				<h3>Tandem</h3>
-				<img src="/img/ico_tandem.png" class="ico-attivita img-thumbnail img-responsive" alt=""/>
+				<img src="img/ico_tandem.png" class="ico-attivita img-thumbnail img-responsive" alt=""/>
 			</a>
 		</div>
 		<div class="col-xs-3">
 			<a href="{{ .Site.BaseURL }}disciplina/escursionismo/">
 				<h3>Escursionismo</h3>
-				<img src="/img/ico_escursioni.png" class="ico-attivita img-thumbnail img-responsive" alt=""/>
+				<img src="img/ico_escursioni.png" class="ico-attivita img-thumbnail img-responsive" alt=""/>
 			</a>
 		</div>
 	</div>
