--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,14 +12,14 @@
 		<header>
 			<div class="row vertical-align">
 				<div class="col-xs-2">
-					<img class="logo img-responsive" src="/img/logo.gtsc.gif"/>
+					<img class="logo img-responsive" src="{{ .Site.BaseURL }}/img/logo.gtsc.gif"/>
 				</div>
 				<div class="col-xs-8 banner-text">
 					<p>Gruppo Ticinese Sportivi Ciechi</p>
 				</div>
 				<div class="col-xs-2">
 					<a href="http://www.ti-sport.ch/index.php">
-						<img class="img-responsive" src="/img/logo-asnf.jpg"/>
+						<img class="img-responsive" src="{{ .Site.BaseURL }}/img/logo-asnf.jpg"/>
 					</a>
 				</div>
 			</div>
