--- a/static/css/stile.css
+++ b/static/css/stile.css
@@ -58,13 +58,15 @@ figure.fig {
 }
 
 .fig img {
-	max-width: 350px;
+	max-width: 300px;
+	max-height: 300px;
 	margin-right: 10px;
 	margin-bottom: 10px;
 }
 
 figcaption p {
 	font-style: italic;
+	max-width: 200px;
 }
 
 /* Tabelle */
