--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,6 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{{ .Title }}</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		
+		<link href="https://fonts.googleapis.com/css?family=Allerta" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
+		
 		<link rel="stylesheet" href="{{ .Site.BaseURL }}css/stile.css">
 	</head>
 	<body>
@@ -14,8 +18,8 @@
 				<div class="col-xs-2">
 					<img class="logo img-responsive" src="{{ .Site.BaseURL }}/img/logo.gtsc.gif"/>
 				</div>
-				<div class="col-xs-8 banner-text">
-					<p>Gruppo Ticinese Sportivi Ciechi</p>
+				<div class="col-xs-8">
+					<p class="banner-text">Gruppo Ticinese Sportivi Ciechi</p>
 				</div>
 				<div class="col-xs-2">
 					<a href="http://www.ti-sport.ch/index.php">
