--- a/static/css/stile.css
+++ b/static/css/stile.css
@@ -1,3 +1,35 @@
+/* Generale */
+h1 {
+	font-family: 'Allerta', Helvetica, Arial, sans-serif;
+	font-size: 44pt;
+	line-height: 50pt;
+	margin-top: 0.5em;
+	margin-bottom: 0.3em;
+}
+
+h2 {
+	font-family: 'Allerta', Helvetica, Arial, sans-serif;
+	font-size: 34pt;
+	line-height: 36pt;
+	margin-top: 1.5em;
+	margin-bottom: 0.3em;
+}
+
+h3 {
+	font-family: 'Allerta', Helvetica, Arial, sans-serif;
+	font-size: 28pt;
+	line-height: 30pt;
+	margin-top: 1em;
+	margin-bottom: 0.3em;
+}
+
+p, li, table, a {
+	font-family: 'Crimson Text', Georgia, Times, serif;
+	font-size: 16pt;
+	line-height: 18pt;
+}
+
+
 /* header */
 header {
 	background-color: lightgray;
@@ -7,21 +39,14 @@ header {
 	align-items: center;
 }
 .banner-text {
+	font-family: 'Allerta', Helvetica, Arial, sans-serif;
 	text-align: center;
-	font-size: 24pt;
+	font-size: 30pt;
+	line-height: 32pt;
 	font-weight: bold;
 }
 img.logo {
 	margin: 5px;
-}
-
-/* Generale */
-h2 {
-	margin-top: 1.5em;
-}
-
-h3 {
-	margin-top: 1em;
 }
 
 /* home page */
