Add 2/3 layout for some page.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 
 <main>
 	<img src="{{ .Site.BaseURL }}img/sci_alpino.JPG" id="home-img" class="img-responsive" alt="due sciatori, un cieco e la sua guida, durante una curva"/>
-	<h2>Chi siamo</h2>
+	<h1>GTSC</h1>
 	<p class="lead">
 	Il “Gruppo Ticinese sportivi Ciechi e Ipovedenti” (GTSC) é un’associazione sportiva. Ne fanno parte persone con e senza difficoltà visive il cui obiettivo è di praticare sport insieme.
 	</p>
